2018-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (%line_commands, %deprecated_commands): 
	Remove @quote-arg and @allow-recursion.
	* NEWS: Mention this change.

2018-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (%misc_commands)
	(%line_commands, %other_commands): Split %misc_commands into two 
	hashes.

2018-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (%misc_commands):
	Change @insertcopying argument type from 'noarg' to 'skipline'.
	* NEWS: Mention this change and the warning for @multitable.

2018-10-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line) <@multitable>: Give a warning 
	messaage for any @-command appearing on the multitable line 
	outside of a braced prototype.

2018-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/sectioning/list-of-tests: Do not run every test
	twice, once with '--html', once with '-c TEXI2HTML'.  Only use 
	the latter.

2018-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/run_parser_all.sh: Do not substitute a
	"@PATH_SEPARATOR@" sequence in the list-of-tests files.
	It is only used in one test so is not worth the complication.
	* tp/tests/sectioning/list-of-tests (test_two_include):
	Remove this test.
	
	* tp/defs.in: Do not set PATH_SEPARATOR.

2018-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/sectioning/list-of-tests:
	(no_section_no_top, no_section_no_top_no_node)
	(more_nodes_than_sections, one_node_no_node, one_node)
	(no_node_chapter_split):
	Remove.  Similar tests exist under tp/t/30sectioning.t.

2018-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/defs.in: Do not set srcdir if it is already set.

	"make distcheck" works again now.

2018-10-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/sectioning/list-of-tests (test_two_include): Move an 
	input file to this directory.

2018-10-19  Gavin Smith  <gavinsmith0123@gmail.com>
